# cognimem-server

./: .gitignore  Cargo.toml  README.md  session_control.json
.github/workflows/: ci.yml
benches/: decay.rs  recall.rs
docs/plans/: hook-based-capture.md
homebrew/: cognimem-server.rb
opencode-plugin/: README.md  index.ts  opencode-hooks.json  opencode.json  package.json
scripts/: build.sh  install.sh
src/: broker.rs  config.rs  embeddings.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  search.rs  state.rs
src/capture/: mod.rs  pipeline.rs  server.rs  types.rs
src/dashboard/: index.html  mod.rs  theme.rs
src/dashboard/static/: app.js  index.html
src/docs/plans/: end-to-end-system-design.md
src/integrations/claudecode/: capture.sh  hooks.json
src/integrations/codex/: capture.sh  skills.toml
src/integrations/opencode/: index.js  package.json
src/memory/: c3gan.rs  capture.rs  codegraph.rs  consolidation.rs  decay.rs  dream.rs  graph.rs  in_memory.rs  injection.rs  mod.rs  ollama.rs  pattern.rs  persona.rs  project_model.rs  skill.rs  slm.rs  slm_prompts.rs  slm_types.rs  storage.rs  store.rs  timescale.rs  types.rs
src/security/: auth.rs  crypto.rs
src/watcher/: mod.rs
tests/: integration.rs
