[package]
name = "cognimem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.5.0", features = ["server", "schemars", "macros", "transport-io", "transport-async-rw"] }
slotmap = "1.0"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28"
strum_macros = "0.28"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
