[package]
name = "cognimem-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "cognimem_server"
path = "src/lib.rs"

[[bin]]
name = "cognimem-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.5.0", features = ["server", "schemars", "macros", "transport-io", "transport-async-rw"] }
slotmap = "1.0"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28"
strum_macros = "0.28"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
wasmtime = "30.0.2"
wat = "1.227.0"
redis = "0.24"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
walkdir = "2"
aes-gcm = "0.10"
rand = "0.8"
rustls = "0.23"
bcrypt = "0.15"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tower = "0.5"

[[bench]]
name = "recall"
harness = false

[[bench]]
name = "decay"
harness = false
